refactor: improve code consistency and readability across multiple classes refactor: lowered the complexity of getById methods