@@ -13,7 +13,7 @@ import net.miarma.api.microservices.huertos.entities.PreUserEntity;
 import java.util.List;
 import java.util.Map;
 
-public class PreUserDAO implements DataAccessObject<PreUserEntity> {
+public class PreUserDAO implements DataAccessObject<PreUserEntity, Integer> {
 
     private final DatabaseManager db;
 
@@ -25,7 +25,38 @@ public class PreUserDAO implements DataAccessObject<PreUserEntity> {
     public Future<List<PreUserEntity>> getAll() {
         return getAll(new QueryParams(Map.of(), new QueryFilters()));
     }
-    
+
+    @Override
+    public Future<PreUserEntity> getById(Integer id) {
+        Promise<PreUserEntity> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(PreUserEntity.class)
+                .where(Map.of("pre_user_id", id))
+                .build();
+
+        db.executeOne(query, PreUserEntity.class,
+                promise::complete,
+            promise::fail
+        );
+
+        return promise.future();
+    }
+
+    public Future<PreUserEntity> getByRequestId(Integer requestId) {
+        Promise<PreUserEntity> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(PreUserEntity.class)
+                .where(Map.of("request_id", requestId))
+                .build();
+
+        db.executeOne(query, PreUserEntity.class,
+                promise::complete,
+            promise::fail
+        );
+
+        return promise.future();
+    }
+
     public Future<List<PreUserEntity>> getAll(QueryParams params) {
         Promise<List<PreUserEntity>> promise = Promise.promise();
         String query = QueryBuilder
@@ -50,7 +81,20 @@ public class PreUserDAO implements DataAccessObject<PreUserEntity> {
         String query = QueryBuilder.insert(preUser).build();
 
         db.execute(query, PreUserEntity.class,
-            list -> promise.complete(list.isEmpty() ? null : list.get(0)),
+            list -> promise.complete(list.isEmpty() ? null : list.getFirst()),
+            promise::fail
+        );
+
+        return promise.future();
+    }
+
+    @Override
+    public Future<PreUserEntity> upsert(PreUserEntity preUserEntity, String... conflictKeys) {
+        Promise<PreUserEntity> promise = Promise.promise();
+        String query = QueryBuilder.upsert(preUserEntity, conflictKeys).build();
+
+        db.execute(query, PreUserEntity.class,
+            list -> promise.complete(list.isEmpty() ? null : list.getFirst()),
             promise::fail
         );
 
@@ -71,15 +115,31 @@ public class PreUserDAO implements DataAccessObject<PreUserEntity> {
     }
 
     @Override
-    public Future<PreUserEntity> delete(Integer id) {
-        Promise<PreUserEntity> promise = Promise.promise();
+    public Future<Boolean> delete(Integer id) {
+        Promise<Boolean> promise = Promise.promise();
         PreUserEntity preUser = new PreUserEntity();
         preUser.setPre_user_id(id);
 
         String query = QueryBuilder.delete(preUser).build();
 
         db.executeOne(query, PreUserEntity.class,
-            _ -> promise.complete(preUser),
+            result -> promise.complete(result != null),
+            promise::fail
+        );
+
+        return promise.future();
+    }
+
+    @Override
+    public Future<Boolean> exists(Integer id) {
+        Promise<Boolean> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(PreUserEntity.class)
+                .where(Map.of("pre_user_id", id))
+                .build();
+
+        db.execute(query, PreUserEntity.class,
+            list -> promise.complete(!list.isEmpty()),
             promise::fail
         );
 
