@@ -14,7 +14,7 @@ import net.miarma.api.microservices.huertos.entities.ViewRequestsWithPreUsers;
 import java.util.List;
 import java.util.Map;
 
-public class RequestDAO implements DataAccessObject<RequestEntity> {
+public class RequestDAO implements DataAccessObject<RequestEntity, Integer> {
 
     private final DatabaseManager db;
 
@@ -25,6 +25,22 @@ public class RequestDAO implements DataAccessObject<RequestEntity> {
     @Override
     public Future<List<RequestEntity>> getAll() {
         return getAll(new QueryParams(Map.of(), new QueryFilters()));
+    }
+
+    @Override
+    public Future<RequestEntity> getById(Integer id) {
+        Promise<RequestEntity> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(RequestEntity.class)
+                .where(Map.of("request_id", id))
+                .build();
+
+        db.executeOne(query, RequestEntity.class,
+                promise::complete,
+                promise::fail
+        );
+
+        return promise.future();
     }
 
     public Future<List<RequestEntity>> getAll(QueryParams params) {
@@ -59,13 +75,54 @@ public class RequestDAO implements DataAccessObject<RequestEntity> {
         return promise.future();
     }
 
+    public Future<ViewRequestsWithPreUsers> getRequestWithPreUserById(Integer id) {
+        Promise<ViewRequestsWithPreUsers> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(ViewRequestsWithPreUsers.class)
+                .where(Map.of("request_id", id))
+                .build();
+        db.executeOne(query, ViewRequestsWithPreUsers.class,
+                promise::complete,
+                promise::fail
+        );
+        return promise.future();
+    }
+
+    public Future<List<RequestEntity>> getByUserId(Integer userId) {
+        Promise<List<RequestEntity>> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(RequestEntity.class)
+                .where(Map.of("requested_by", userId))
+                .build();
+
+        db.execute(query, RequestEntity.class,
+                list -> promise.complete(list.isEmpty() ? List.of() : list),
+                promise::fail
+        );
+
+        return promise.future();
+    }
+
     @Override
     public Future<RequestEntity> insert(RequestEntity request) {
         Promise<RequestEntity> promise = Promise.promise();
         String query = QueryBuilder.insert(request).build();
 
         db.execute(query, RequestEntity.class,
-                list -> promise.complete(list.isEmpty() ? null : list.get(0)),
+                list -> promise.complete(list.isEmpty() ? null : list.getFirst()),
+                promise::fail
+        );
+
+        return promise.future();
+    }
+
+    @Override
+    public Future<RequestEntity> upsert(RequestEntity requestEntity, String... conflictKeys) {
+        Promise<RequestEntity> promise = Promise.promise();
+        String query = QueryBuilder.upsert(requestEntity, conflictKeys).build();
+
+        db.executeOne(query, RequestEntity.class,
+                promise::complete,
                 promise::fail
         );
 
@@ -86,15 +143,31 @@ public class RequestDAO implements DataAccessObject<RequestEntity> {
     }
 
     @Override
-    public Future<RequestEntity> delete(Integer id) {
-        Promise<RequestEntity> promise = Promise.promise();
+    public Future<Boolean> delete(Integer id) {
+        Promise<Boolean> promise = Promise.promise();
         RequestEntity request = new RequestEntity();
         request.setRequest_id(id);
 
         String query = QueryBuilder.delete(request).build();
 
         db.executeOne(query, RequestEntity.class,
-                _ -> promise.complete(request),
+                result -> promise.complete(result != null),
+                promise::fail
+        );
+
+        return promise.future();
+    }
+
+    @Override
+    public Future<Boolean> exists(Integer id) {
+        Promise<Boolean> promise = Promise.promise();
+        String query = QueryBuilder
+                .select(RequestEntity.class)
+                .where(Map.of("request_id", id))
+                .build();
+
+        db.executeOne(query, RequestEntity.class,
+                result -> promise.complete(result != null),
                 promise::fail
         );
 
